--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 
 [tool.pytest.ini_options]
-addopts = "--cov=AoC2015 --cov=AdventUtils"
+addopts = "--cov=AoC2015 --cov=AdventUtils --cov=AoC2016"
 testpaths = [
     "tests",
 ]
