--- a/setup.cfg
+++ b/setup.cfg
@@ -14,7 +14,7 @@ classifiers =
 [options]
 package_dir=
     =src
-packages=AdventUtils,AoC2015
+packages=AdventUtils,AoC2015,AoC2016
 install_requires =
     requests>=2
 python_requires = >=3.9
