--- a/tox.ini
+++ b/tox.ini
@@ -1,12 +1,11 @@
 [tox]
 minversion = 3.8.0
-envlist = py39, flake8, mypy
+envlist = py310, flake8
 isolated_build = true
 
 [gh-actions]
 python =
-    3.9: py39, mypy, flake8
-    3.10: py310
+    3.10: py310, flake8
 
 [testenv]
 setenv =
@@ -18,14 +17,6 @@ commands =
     coverage report --fail-under=80 --skip-empty
 
 [testenv:flake8]
-basepython = python3.9
+basepython = python3.10
 deps = flake8
 commands = flake8 src tests
-
-[testenv:mypy]
-basepython = python3.9
-deps =
-    -r{toxinidir}/requirements_dev.txt
-commands =
-    mypy src
-
